@@ -1,3 +1,9 @@
+2014-05-21  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_graph.php: Fix unknown graphs in graphs
+	with only negative values. Now the unknown graph is always positive
+	Ticket: #569 
+
 2014-05-22  Vanessa Gil <vanessa.gil@artica.es>
 
 	* godmode/servers/manage_recontask.php
